# glitch-art-display

./: README.md  pyproject.toml
glitch_art_display/: jpeg.py  main.py
